@@ -20,6 +20,7 @@ Version 0.15.2
 	Other: 
 		* Added keywords to desktop files.
 		* Added appdata files.
+		* Update names for elements 113, 115, 177 and 118.
 
 Version 0.15.1
 	3d viewer:
