@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2016-06-18  Jean Bréfort  <jean.brefort@normalesup.org>
+	* database/elements.xml.in: update names for elements 113, 115, 177 and 118.
+
 2016-06-17  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/document.cc: fix crash when deleting a bond outside a molecule.
 	[#48256]
